--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/header/__logo-link/header__logo-link.css);
+@import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/page/__header/page__header.css);
+@import url(./blocks/page/__main/page__main.css);
+@import url(./blocks/page/__footer/page__footer.css);
+@import url(./blocks/profile/profile.css);
+@import url(./blocks/profile/__container/profile__container.css);
+@import url(./blocks/profile/__avatar/profile__avatar.css);
+@import url(./blocks/profile/__avatar-cont/profile__avatar-cont.css);
+@import url(./blocks/profile/__av-overlay/profile__av-overlay.css);
+@import url(./blocks/profile/__av-overlay-edit-pic/profile__av-overlay-edit-pic.css);
+@import url(./blocks/profile/__personal-data/profile__personal-data.css);
+@import url(./blocks/profile/__add-btn/profile__add-btn.css);
+@import url(./blocks/profile/__edit-btn/profile__edit-btn.css);
+@import url(./blocks/profile/__name/profile__name.css);
+@import url(./blocks/profile/__job/profile__job.css);
+@import url(./blocks/profile/__name-containter/profile__name-containter.css);
+@import url(./blocks/main/main.css);
+@import url(./blocks/main/__profile-section/main__profile-section.css);
+@import url(./blocks/main/__elements-section/main__elements-section.css);
+@import url(./blocks/elements/elements.css);
+@import url(./blocks/elements/__title/elements__title.css);
+@import url(./blocks/elements/__list/elements__list.css);
+@import url(./blocks/elements/__like/elements__like.css);
+@import url(./blocks/elements/__like-cont/elements__like-cont.css);
+@import url(./blocks/elements/__likes-number/elements__likes-number.css);
+@import url(./blocks/elements/__like/_active/elements__like_active.css);
+@import url(./blocks/elements/__element/elements__element.css);
+@import url(./blocks/elements/__image-btn/elements__image-btn.css);
+@import url(./blocks/elements/__delete/elements__delete.css);
+@import url(./blocks/elements/__delete/_hidden/elements__delete_hidden.css);
+@import url(./blocks/elements/__title-container/elements__title-container.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/popup/__submit/popup__submit.css);
+@import url(./blocks/popup/__submit/_invalid/popup__submit_invalid.css);
+@import url(./blocks/popup/__form/popup__form.css);
+@import url(./blocks/popup/__form-delete/popup__form-delete.css);
+@import url(./blocks/popup/__form-update/popup__form-update.css);
+@import url(./blocks/popup/__close-btn/popup__close-btn.css);
+@import url(./blocks/popup/__input/popup__input.css);
+@import url(./blocks/popup/__section/popup__section.css);
+@import url(./blocks/popup/__input-error/popup__input-error.css);
+@import url(./blocks/popup/__input/_state/popup__input_state_invalid.css);
+@import url(./blocks/popup/__paragraph/popup__paragraph.css);
+@import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__cont-delete/popup__cont-delete.css);
+@import url(./blocks/popup/__image-container/popup__image-container.css);
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__img-paragraph/popup__img-paragraph.css);
+@import url(./blocks/popup/_type/popup_type_image.css);
