--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,14 @@ font-size: 13px;
   justify-content: space-between;
 }
 
-.exit-button {
+.header__login-button {
   cursor: pointer;
+  background-color: transparent;
+  color: rgb(161, 161, 161);
+  padding: 10px 5px;
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: 'Inter';
 }
