--- a/src/blocks/page/__header/page__header.css
+++ b/src/blocks/page/__header/page__header.css
@@ -4,6 +4,8 @@
   width: 100%;
   max-width: 880px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 930px) {
