--- a/src/index.css
+++ b/src/index.css
@@ -55,160 +55,18 @@
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/__img-paragraph/popup__img-paragraph.css);
 @import url(./blocks/popup/_type/popup_type_image.css);
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__title/register__title.css);
+@import url(./blocks/register/__input/register__input.css);
+@import url(./blocks/register/__submit/register__submit.css);
+@import url(./blocks/register/__already-registered-text/register__already-registered-text.css);
+@import url(./blocks/register/__par/register__par.css);
+@import url(./blocks/register/__link/register__link.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__logged-in-info/header__logged-in-info.css);
+@import url(./blocks/header/__login-button/header__login-button.css);
+@import url(./blocks/header/__link-button/header__link-button.css);
+@import url(./blocks/register-popup/register-popup.css);
+@import url(./blocks/register-popup/__logo/register-popup__logo.css);
+@import url(./blocks/register-popup/__text/register-popup__text.css);
 
-.not-found__title {
-  
-  color: white;
-  font-size: 26px;
-
-}
-.not-found__link {
-  color: white;
-  font-size: 20px;
-}
-
-.not-found {
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-}
-.register {
-  width: 100%;
-  max-width: 358px;
-  /*border: 1px solid grey;*/
-  margin: 60px 0 0 0;
-  min-height: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-}
-
-.register__title {
-  color: white;
-  font-size: 24px;
-  font-family: 'Inter';
-  max-width: 150px;
-  line-height: 29.05px;
-  font-weight: 900;
-  /*border: 2px solid purple;*/
-  margin: 0 0 50px 0;
-  padding: 0;
-}
-
-.register__input {
-  width: 100%;
-  background-color: transparent;
-  border-top: 0;
-  border-left:0;
-  border-right: 0;
-  border-bottom: 2px solid #CCC;
-  outline: 0;
-  margin:0 0 30px 0;   
-  padding: 0 0 13px 0;
-  color: grey;
-  font-size: 14px;
-  line-height: 16.94px;
-  font-family: 'Inter';
-}
-
-
-.register-submit {
-  width: 100%;
-  margin: 186px 0 0 0;
-  padding: 13px 20px;
-  background-color: white;
-  border-radius: 2px;
-  border: 0;
-  outline: 0;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 21.78px;
-}
-
-.register-to-login {
-  display: flex; 
-  margin: 10px 0 0 0;
-}
-
-.register__par {
-  color: white;
-  font-size: 13px;
-  margin: 0 15px 0 0;
-}
-
-.register__link {
-text-decoration: none;
-color: white;
-cursor: pointer;
-font-size: 13px;
-
-}
-
-.header__email {
-  font-size: 18px;
-  color: white;
-  font-family: 'Inter';
-  padding: 0;
-  margin: 0 24px 0 0;
-}
-
-.temp__header {
-  display: flex;
-  align-items: center;
-}
-
-.header__login-button {
-  cursor: pointer;
-  background-color: transparent;
-  color: rgb(161, 161, 161);
-  padding: 10px 5px;
-  border: 0;
-  outline: 0;
-  font-size: 18px;
-  line-height: 22px;
-  font-family: 'Inter';
-}
-
-
-.header__link-button {
-  cursor: pointer;
-  background-color: transparent;
-  color: rgb(161, 161, 161);
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 18px;
-  line-height: 22px;
-  font-family: 'Inter';
-  text-decoration: none;
-}
-
-.register-popup {
-  flex-direction: column;  
-  min-height: 330px;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 430px;
-  padding: 0;
-  margin: 0;
-}
-
-.register-popup__logo {
-  width: 120px;
-  height: 120px;
-}
-
-.register-popup__text {
-font-family: 'Inter';
-font-size: 24px;
-font-weight: 900;
-line-height: 29.04px;
-max-width: 358px;
-text-align: center;
-
-padding: 0;
-margin: 32px 0 0 0;
-}
