--- a/src/blocks/register/__link/register__link.css
+++ b/src/blocks/register/__link/register__link.css
@@ -2,5 +2,8 @@
   text-decoration: none;
   color: white;
   cursor: pointer;
-  font-size: 13px;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  line-height: 16.94px;
 }
